text editting on About page

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 								<iframe src="https://open.spotify.com/embed/album/7eVntc9cEAjSdZmwGqrtM4" width="100%" height="100" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 									
-								<p>	Mr. Bringle's professional works include music placements on every major reality show, NBC prime time shows, game shows, documentaries, and corporate videos.</p> 
+								<p>	Mr. Bringle's professional works include music placements on every major reality show in the last 10 years, NBC prime time shows, game shows, documentaries, and corporate videos.</p> 
 								</p>
 							</article>
 
